--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "teddy-test",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:teddy-test": "node dist/teddy-test/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +19,13 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.3",
+    "@ngrx/store": "^19.2.1",
+    "@tailwindcss/postcss": "^4.1.11",
     "express": "^4.18.2",
+    "lucide-angular": "^0.525.0",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
